# 3c-monitors

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/ccmonitor/: __init__.py  __main__.py  app.py  collector.py
src/ccmonitor/widgets/: __init__.py  context_gauge.py  cost_panel.py  plan_usage.py  rate_monitor.py  session_list.py  sparkline.py  styled_bar.py  usage_table.py
tests/: test_collector.py
